# lineage-map

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.auth.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  docker.yml  lineage-sync.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Graph.jsx
lineagemap/: cli.py
lineagemap/graph/: builder.py  models.py
lineagemap/parser/: dbt.py  sql.py
lineagemap/server/: app.py
lineagemap/server/static/: index.html
lineagemap/server/static/assets/: index-8hdPgCyV.js
tests/: test_parser.py
tests/fixtures/: simple_manifest.json
