[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineagemap"
version = "0.1.0"
description = "Column-level data lineage for dbt projects. One command, no catalog required."
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=20.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
lineagemap = "lineagemap.cli:cli"

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
